fix: overflow issues via nbsp; and min-width updates

--- a/web/css/review-form.css
+++ b/web/css/review-form.css
@@ -89,7 +89,7 @@
 
 .pager-container {
   text-align: center;
-  min-width: 355px;
+  min-width: 375px;
 }
 
 .pager {
